- Added config for avoiding security limitation on new versions of hugo

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "uoc_webri": "looper.js"
   },
   "scripts": {
+    "start": "node ./scripts/rename-languages.js && hugo --environment dev serve",    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
