PLATACON-602: Added required info for cache invalidation command

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,5 +41,5 @@ phases:
             fi
           fi
     finally:
-      - aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID} --invalidation-batch invalidation-batch.json
+      - aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID} --invalidation-batch file://invalidation-batch.json
       - echo "Script finished running"
