PLATACON-616: Remove albirasolutions respositories and config

--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -2,8 +2,8 @@
 backend:
   name: github
   branch: master
-  repo: albirasolutions/UOC_WebRI
-  base_url: https://transfer-research.pre.uoc.edu # Path to ext auth provider
+  repo: UOC/PLATACON_WEB_RI_TEST
+  base_url: https://transfer-research.test.uoc.edu # Path to ext auth provider
   auth_endpoint: /api-oauth/auth
 media_folder: "static/img" # Media files will be stored in the repo under static/media/
 public_folder: "/img"
