PLATACON-612: Removed useless information about "research groups" from content types like spin-offs, services and patents to centralize them in the data folder, thus keeping them up to date. Added json files with the "research groups" in order to use them from templates.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,9 @@ phases:
     commands:
       - node ./scripts/replace-platacon-url.js
       - node ./scripts/rename-languages.js
+      - node ./scripts/get-data.js
     finally:
-      - echo "Finished renaming language files"
+      - echo "Finished executing pre-build scripts"
   build:
     commands:
       - hugo --environment ${ENV}
